--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
 
 
+body {
+    background: #eee;
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    margin-top: 10px;
+}
 
+canvas {
+    width: 1024px;
+    height: 768px;
+    margin: 0px auto;
+    background: #fcfcfc;
+    position: relative;
+}
